@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="javascripts/ol/ol.min.css" />
 <script type="text/javascript" src="javascripts/ol/ol.min.js"></script>
 
 <script type="text/javascript" src="javascripts/cmdbuild/view/management/classes/map/CMMap.js"></script>
