@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Šířka vyskakovacích oken (procenta)",
 	"popupWindows": "Vyskakovací okna",
 	"port": "Port",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "Přednaplnit, pokud je unikátní",
 	"presets": "Předvolby",
 	"previous": "Předchozí",
