@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Prozentbreite des PopUp Fensters",
 	"popupWindows": "PopUp Fenster",
 	"port": "Port",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "<em>Preselect if unique</em>",
 	"presets": "<em>Presets</em>",
 	"previous": "Vorige",
