@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "<em>Popup percentage width</em>",
 	"popupWindows": "<em>Popup windows</em>",
 	"port": "Θύρα",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "Προεπιλογή εάν είναι μοναδικό",
 	"presets": "<em>Presets</em>",
 	"previous": "<em>Previous</em>",
