@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Popup percentage width",
 	"popupWindows": "Popup windows",
 	"port": "Port",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "<em>Preselect if unique</em>",
 	"presets": "<em>Presets</em>",
 	"previous": "قبلی",
