@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Širina (u postocima) popup prozora",
 	"popupWindows": "popup prozor",
 	"port": "<em>Port</em>",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "<em>Preselect if unique</em>",
 	"presets": "<em>Presets</em>",
 	"previous": "<em>Previous</em>",
