@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Larghezza percentuale finestra popup",
 	"popupWindows": "Finestre popup",
 	"port": "Porta",
+	"position": "Posizione",
 	"preselectIfUnique": "Preseleziona se unico",
 	"presets": "Preconfigurazioni",
 	"previous": "Precedente",
