@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "ポップアップのパーセント幅",
 	"popupWindows": "ポップアップウインドウ",
 	"port": "ポート",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "<em>Preselect if unique</em>",
 	"presets": "<em>Presets</em>",
 	"previous": "前",
