@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Popup percentage breedte",
 	"popupWindows": "Popup vensters",
 	"port": "Poort",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "<em>Preselect if unique</em>",
 	"presets": "<em>Presets</em>",
 	"previous": "Vorige",
