@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Širina (u procentima) popup prozora",
 	"popupWindows": "popup prozor",
 	"port": "Port",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "<em>Preselect if unique</em>",
 	"presets": "<em>Presets</em>",
 	"previous": "Prethodna",
